--- a/src/pages/requirimientos.astro
+++ b/src/pages/requirimientos.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import { Card } from '../components/Card';
 ---
 
-<Layout title="Requerimientos del Sistema">
+<Layout title="Requerimientos del Sistema" hideSidebar={true}>
 	<div class="space-y-8 max-w-4xl mx-auto">
 		<Card 
 			title="Requerimientos" 
