--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,9 @@ import { AnimacionSubida } from '../components/AnimacionSubida';
 	<div class="min-h-screen flex items-center justify-center">
 		<AnimacionSubida duration={1200}>
 			<Card 
-				title="bienvenidos a la documentación" 
-				subtitle="boxware"
+				title="Bienvenidos a la Documentación"
+				description="Documentación de la API de Boxware"
+				hasGlassEffect={true}
 			/>
 		</AnimacionSubida>
 	</div>
