--- a/src/components/Sidebar/Sidebar.astro
+++ b/src/components/Sidebar/Sidebar.astro
@@ -16,7 +16,7 @@ const {
 } = Astro.props;
 const currentPath = Astro.url.pathname;
 const isFelipage = currentPath === '/felipe';
-const isRequirimientos = currentPath === '/requirimientos' || currentPath === '/pdf-requerimientos';
+const isRequirimientos = currentPath === '/ver-requerimientos';
 
 // Ya no necesitamos la configuración del botón
 
