--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,20 @@
 import Layout from '../layouts/Layout.astro';
 import { Card } from '../components/Card';
 import { AnimacionSubida } from '../components/AnimacionSubida';
+import { Button } from '../components/Button';
 ---
 
 <Layout title="Página de Inicio">
+	<div class="fixed top-4 right-4">
+		<Button 
+			href="/ver-requerimientos" 
+			variant="primary" 
+			size="lg"
+		>
+			Ver Requerimientos
+		</Button>
+	</div>
+
 	<div class="min-h-screen flex items-center justify-center">
 		<AnimacionSubida duration={1200}>
 			<Card 
